--- a/scss/normalize.scss
+++ b/scss/normalize.scss
@@ -9,7 +9,7 @@
  */
 
  html {
-    line-height: 1.15; /* 1 */
+    line-height: 1.15;
     -webkit-text-size-adjust: 100%; /* 2 */
   }
   
@@ -39,7 +39,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 body {
   line-height: 1;
-  font-size: 14px; /* устанавливаем базовую высоту */
+   /* устанавливаем базовую высоту */
 }
 ol, ul {
 	list-style: none; /* убираем маркеры для нумерованных и обычных списков */
@@ -66,11 +66,11 @@ table {
 	border-spacing: 0; /* убираем расстояние между ячейками */
 }
   
-  // body {
-  //   margin: 0;
-  //   padding: 0;
-  //   font-size: 12px;
-  // }
+  body {
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+  }
   
   /**
    * Render the `main` element consistently in IE.
