--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -8,4 +8,33 @@
   font-family: "ProximaNovaBold";
   src: url("../fonts/ProximaNovaBold.ttf") format("truetype");
   font-style: normal;
-  font-weight: normal; }
+  font-weight: 700; }
+
+body {
+  font-family: "ProximaNovaRegular"; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700; }
+
+h1 {
+  font-size: 300%; }
+
+h2 {
+  font-size: 225%; }
+
+h3 {
+  font-size: 150%; }
+
+h4 {
+  font-size: 112.5%; }
+
+h5 {
+  font-size: 100%; }
+
+p {
+  font-size: 87.5%; }
